--- a/usuario.html
+++ b/usuario.html
@@ -1,17 +1,27 @@
+<!DOCTYPE html>
+<html lang="es">
 <html>
     <head>
-        <link rel="stylesheet" href="../CSS/bootstrap.min.css">
-        <link rel="stylesheet" href="../CSS/stylemain.css">
+        <meta charset="UTF-8">
+        <title>Menu</title> <!--- Se me hacia incomodo de ver el titulo sin nombre--> 
+        <header>
+            <link rel="stylesheet" href="../CSS/stylemain.css">
+            <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+            <link rel="stylesheet" href="../CSS/bulma.min.css">
+        </header>
     </head>
-    <body>
-        <div class="navegacion">
-            <nav class="nav">
-                <a class="nav-link" href="/Menu/Mainmenu.html">Juego</a>
-                <a class="nav-link disabled" href="usuario.html">Cuenta</a>
-            </nav>
-        </div>
-        <h1> 
-            Menu de opciones de cuenta para prueba xd
-        </h1>
-    </body>
+<body>
+    <div class="navegacion">
+        <nav class="nav">
+            <a class="nav-link disabled" href="Mainmenu.html">Juego</a>
+            <a class="nav-link" href="../usuario.html">Cuenta</a>
+        </nav>
+    </div>
+    <div class="menu">
+        <a href="../Game/game.html" class="nws">Nuevo Juego</a>
+        <a href="opciones.html" class="ops">Opciones</a>
+        <a href="stats.html" class="sts">Estadisticas</a>
+        <a href="cards.html" class="crds">Cartas</a> <!--Nombre en veremos, si es asi la organizacion-->
+    </div>
+</body>
 </html>
